# hk-fastapi-file-upload

./: Dockerfile  README.md  pyproject.toml
app/: logs.py  main.py  schemas.py  store.py
app/endpoints/: delete.py  list.py  upload.py
tests/: test_api.py
